Add subscriber content detection and configurable output directory
Capture `is_subscriber_only` field from tweet data and add an output
directory setting to the popup UI, passed through to the native host.

--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,13 @@
       </div>
     </div>
     <button id="toggle"></button>
+    <div class="settings">
+      <label class="settings-label" for="output-dir">Output directory</label>
+      <div class="settings-row">
+        <input type="text" id="output-dir" placeholder="~/Downloads/xtap" spellcheck="false">
+        <button id="save-dir" class="save-btn">Save</button>
+      </div>
+    </div>
   </div>
   <script src="popup.js"></script>
 </body>
