Add debug logging toggle: write service worker logs to date-rotated files
When enabled via popup checkbox, intercepts console.log/warn/error in the
service worker, buffers log lines with timestamps, and flushes them to the
native host which writes debug-YYYY-MM-DD.log in the output directory.

--- a/popup.html
+++ b/popup.html
@@ -25,6 +25,10 @@
         <input type="text" id="output-dir" placeholder="~/Downloads/xtap" spellcheck="false">
         <button id="save-dir" class="save-btn">Save</button>
       </div>
+      <label class="toggle-row">
+        <input type="checkbox" id="debug-toggle">
+        <span class="toggle-label">Debug logging to file</span>
+      </label>
     </div>
   </div>
   <script src="popup.js"></script>
