Move debug logging and discovery mode toggles to debug dashboard
Declutters the popup by relocating both developer-facing toggles to the
debug dashboard, where they sit alongside transport health and capture
events. Popup now only shows user-facing controls (stats, pause/resume,
output dir, video download).

--- a/popup.html
+++ b/popup.html
@@ -35,15 +35,8 @@
         <input type="text" id="output-dir" placeholder="~/Downloads/xtap" spellcheck="false">
         <button id="save-dir" class="save-btn">Save</button>
       </div>
-      <label class="toggle-row">
-        <input type="checkbox" id="debug-toggle">
-        <span class="toggle-label">Debug logging to file</span>
-      </label>
-      <label class="toggle-row">
-        <input type="checkbox" id="verbose-toggle">
-        <span class="toggle-label">Discovery mode (verbose endpoint logging)</span>
-      </label>
     </div>
+    <a id="open-debug" class="debug-link">Debug Dashboard</a>
   </div>
   <script src="popup.js"></script>
 </body>
